feat: enhance cleaner update process with notification and profile change detection

--- a/src/main/resources/templates/mail/new_cleaner.html
+++ b/src/main/resources/templates/mail/new_cleaner.html
@@ -108,7 +108,7 @@
         <p class="content-paragraph" th:text="'Hello ' + ${adminName} + ','">Hello Admin,</p>
 
         <p class="content-paragraph">
-            A new cleaner has been added and is awaiting your review. Please sign in to the dashboard to approve or reject this submission.
+            A new cleaner has been added or a cleaner has updated his/her profile and is awaiting your review. Please sign in to the dashboard to approve or reject this submission.
         </p>
 
         <p class="meta">
