feat: update email template to use dynamic title for cleaner submissions and updates

--- a/src/main/resources/templates/mail/new_cleaner.html
+++ b/src/main/resources/templates/mail/new_cleaner.html
@@ -100,7 +100,7 @@
 <body>
 <div class="email-container">
     <div class="header-section">
-        <div class="header-title">New Cleaner Submitted</div>
+        <div class="header-title" th:text="${title}">New Cleaner Submitted</div>
         <div class="header-subtitle">Action required: review and approve</div>
     </div>
 
